# CPU_Emulator

./: CMakeLists.txt  README  main.cpp
CPU_Emulator/include/: CPU.h  Memory.h  common.h
CPU_Emulator/src/: CPU.cpp  Memory.cpp
CPU_Emulator2/: test.h
backup/: CMakeLists.txt
cmake/: gtest.cmake
tests/: CPU_Emulator.h  TestCase1.h  initGoogleTest.h
